# pretrain-on-test

./: .gitignore  README.md  _to_tap.py  analysis.ipynb  cloud.py  describe_datasets.ipynb  experiment.sh  experiment_gcp.sh  experiment_mini.sh  gcp.sh  google_colab.ipynb  launch_gcp_instance_cpu.sh  meta_analysis.ipynb  notes.md  overall_analysis.ipynb  pyproject.toml  run.py  setup.py
accuracies/ag_news/: accuracies.csv
accuracies/app_reviews/: accuracies.csv
accuracies/financial_phrasebank/: accuracies.csv
accuracies/trec/: accuracies.csv
accuracies_/ethos/: accuracies.csv
accuracies_/yelp_review_full/: accuracies.csv
accuracies_from_paper/200/bert/movie_rationales/: accuracies.csv
accuracies_from_paper/bert/mtop_domain/: accuracies.csv
accuracies_from_paper/gpt2/rotten_tomatoes/: accuracies.csv
analysis/: README.md  dataset.ipynb  dataset_level.ipynb  describe_datasets.ipynb  leaderboard.ipynb  main.ipynb  main_100.ipynb  main_200.ipynb  main_50.ipynb  main_500.ipynb  meta.ipynb  meta.py  meta_200_treatment.csv  meta_500_treatment.csv  meta_means_200_treatment.csv  meta_means_500_treatment.csv  model.ipynb  notes.md  pca.ipynb  plot_posterior_distr.ipynb  plots.ipynb  posterior_pred.ipynb  results.ipynb  run.py  test.ipynb  utils.py  zero_shot.ipynb
analysis/contamination/: dataset.json  n500.py  plot.ipynb  test.ipynb  test_bias.py
analysis/contamination/run-2024-08-13_19-06-44-n500_contamination/: experiment.json
analysis/contamination/run-2024-08-21_00-45-59-n500_contamination/: experiment.json
analysis/contamination/saved_models_in_hf/: experiment.json
analysis/dirty_file_processing/: acc_from_splits.ipynb  acc_from_subsamples.ipynb  merge_runs.py
analysis/fit_posteriors/gpt2_epochs_2/: m100_n50.ipynb  m50_n50.ipynb
analysis/fit_posteriors/m100/: m100_n100.ipynb  m100_n200.ipynb  m100_n50.ipynb  m100_n500.ipynb  main_m100_n100.ipynb  main_m100_n200.ipynb  main_m100_n50.ipynb  main_m100_n500.ipynb
analysis/fit_posteriors/m50/: m50_n100.ipynb  m50_n200.ipynb  m50_n50.ipynb  m50_n500.ipynb  main_m50_n100.ipynb  main_m50_n200.ipynb  main_m50_n50.ipynb  main_m50_n500.ipynb
analysis/fit_posteriors/zero_shot/: n100.ipynb
analysis/fit_posteriors/zero_shot_packing/: n100.ipynb
analysis/meta/: meta.ipynb  meta.py  meta_m100_n500_treatment.csv  meta_m50_n50_control.csv  meta_m50_n50_treatment.csv  meta_zero_shot_m100_n100_bias.csv  meta_zero_shot_m100_n100_treatment.csv
analysis/results/: README.md  posterior_pred.ipynb  posterior_pred.py  posterior_pred_conditional.ipynb  summary.py
cloud_scripts/: _setup_python_env.sh  _setup_python_env_analysis.sh  run.sh
cloud_scripts/gcp/: README.md  _install_cuda.sh  _post_launch.sh  _preamble.sh  _zones.py  delete_old_test_logs.py  launch.py  launch.sh  launch_cpu_test.sh  launch_gpu.sh
cloud_scripts/gcp/analyses/: m100_n200.sh  m50_n100.sh
src/pretrain_on_test/: __init__.py  _config.py  _dum.py  _load_data.py  classification.py  classification_sft.py  classification_zero_shot.py  data.py  experiment.py  load_data.py  pretrain.py  pretrain_for_sft.py  protocols.py  train.py
(+783 files in other folders)
