[project]
name = "pretrain-on-test"
version = "0.0.1"
readme = "README.md"
license = { text = "MIT License" }
dependencies = [
    "accelerate>=0.25.0,<1.0",
    "datasets>=2.10.0",
    "pandas>=1.5.3",
    "polars>=0.18.0",
    "pydantic>=2.1.0",
    "rich>=13.7.1",
    "scikit-learn>=1.2.2",
    "tqdm>=4.27.0",
    "transformers[torch]>=4.31.0",
    "typed-argument-parser>=1.10.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
gcp = [
    "google-cloud-storage>=2.16.0",
    "google-cloud-logging>=3.10.0",
]
stat = [
    "bambi>=0.13.0",
    "jupyter>=1.0.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
include = ["*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# E731: Do not assign a `lambda` expression, use a `def`
ignore = ["E731"]
