[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pretrain-on-test"
version = "0.0.1"
readme = "README.md"
license = { text = "MIT License" }
dependencies = [
    "accelerate>=0.30.1,<1.0",
    "bitsandbytes>=0.42.0",
    "cappr[hf]>=0.9.1",
    "datasets>=2.10.0",
    "pandas>=1.5.3",
    "peft>=0.11.1",
    "pydantic>=2.1.0",
    "scikit-learn>=1.2.2",
    "sentencepiece>=0.2.0",
    "tqdm>=4.27.0",
    "transformers[torch]>=4.41.1",
    "trl>=0.8.6",
    "typed-argument-parser>=1.10.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
gcp = [
    "google-cloud-storage>=2.16.0",
    "google-cloud-logging>=3.10.0",
    "rich>=13.7.0",
]
stat = [
    "bambi>=0.13.0",
    "jupyter>=1.0.0",
    "polars>=0.18.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
include = ["*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# E731: Do not assign a `lambda` expression, use a `def`
ignore = ["E731"]
